test_case/rust-lang_rust/34907_234607971_2.rs

-            //~^ ERROR method `deref` has an incompatible type for trait
-            //~| expected &-ptr
-            //~| found i8 [E0053]
